--- a/src/packages/apps/Backup/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/Backup/res/values-zh-rTW/strings.xml
@@ -32,7 +32,7 @@
         <item>通訊錄</item>
         <item>通話記錄</item>
         <item>簡訊</item>
-        <item>彩色簡訊</item>
+        <item>MMS</item>
         <item>系統設定</item>
         <item>WLAN設定</item>
         <item>桌面佈局位置</item>
