--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
@@ -68,7 +68,7 @@
             %1$s
         </xliff:g>
     </string>
-    <string name="sync_settings">同步设置</string>
+    <string name="sync_settings">同步与云服务</string>
     <string name="email_already_be_used">邮箱已被注册</string>
     <string name="error_no_sms_service">短信服务不可用</string>
     <string name="reg_by_email_failure">注册失败：
@@ -103,7 +103,7 @@
     <string name="login_notice">登录中，请稍候</string>
     <string name="login_retry">重试</string>
     <string name="data_sync_notice">您能使用小米帐户同步您的短信、联系人等各种数据，从此无需担心数据丢失。同时享受网络短信等云服务。</string>
-    <string name="sync_dspt">用小米帐户同步手机数据并启用云服务</string>
+    <string name="sync_dspt">开启同步和云服务</string>
     <string name="sync_sub_dspt">系统可能会发送一条短信来激活服务</string>
     <string name="send_sms_for_sync_title">同步服务需要激活</string>
     <string name="send_sms_for_sync_notice">系统将发送一条短信来激活同步服务，是否继续？</string>
@@ -131,7 +131,9 @@
     <string name="find_device_error_network">网络不可用</string>
     <string name="find_device_error_server">服务器出错</string>
     <string name="find_device_success_title">找回手机功能已经开启</string>
-    <string name="find_device_notice">当您的手机丢失时，可登录\ni.xiaomi.com\n尝试找回、锁定手机或擦除数据</string>
+    <string name="find_device_notice_p1">当您的手机丢失时，可登录</string>
+    <string name="find_device_notice_p2">i.xiaomi.com</string>
+    <string name="find_device_notice_p3">尝试找回、锁定手机或擦除数据</string>
     <string name="i_know">我知道了</string>
     <string name="find_device_disabled_title">找回手机功能已经关闭</string>
     <string name="find_device_disabled_notice">您可以在 设置 -> 帐户与同步\n-> 小米帐户\n中重新开启中此功能</string>
