--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
@@ -68,7 +68,7 @@
             %1$s
         </xliff:g>
     </string>
-    <string name="sync_settings">同步設定</string>
+    <string name="sync_settings">同步與雲端服務</string>
     <string name="email_already_be_used">信箱已被註冊</string>
     <string name="error_no_sms_service">簡訊服務不可用</string>
     <string name="reg_by_email_failure">註冊失敗：
@@ -103,7 +103,7 @@
     <string name="login_notice">登錄中，請稍候</string>
     <string name="login_retry">重試</string>
     <string name="data_sync_notice">您能使用小米帳號同步您的簡訊、聯絡人等各種數據，從此無需擔心數據丟失。同時享受網路簡訊等雲服務。</string>
-    <string name="sync_dspt">用小米帳號同步手機資料並啟用雲端服務</string>
+    <string name="sync_dspt">開啟同步和雲端服務</string>
     <string name="sync_sub_dspt">系統可能會發送一條簡訊來啟用服務</string>
     <string name="send_sms_for_sync_title">同步服務需要啟用</string>
     <string name="send_sms_for_sync_notice">系統將發送一條簡訊來啟用同步服務，是否繼續？</string>
@@ -131,7 +131,9 @@
     <string name="find_device_error_network">網路不可用</string>
     <string name="find_device_error_server">伺服器出錯</string>
     <string name="find_device_success_title">找回手機功能已經開啟</string>
-    <string name="find_device_notice">當您的手機丟失時，可登錄\nmy.xiaomi.com\n嘗試找回、鎖定手機或移除資料</string>
+    <string name="find_device_notice_p1">當您的手機丟失時，可登錄</string>
+    <string name="find_device_notice_p2">i.xiaomi.com</string>
+    <string name="find_device_notice_p3">嘗試找回、鎖定手機或移除資料</string>
     <string name="i_know">我知道了</string>
     <string name="find_device_disabled_title">找回手機功能已經關閉</string>
     <string name="find_device_disabled_notice">您可以在 設定 -> 帳號與同步\n-> 小米帳號\n中重新開啟中此功能</string>
