--- a/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
@@ -1,83 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">XiaoMi Service Framework</string>
+    <string name="app_name">Xiaomi Service Framework</string>
 
     <string name="account">Account</string>
-    <string name="account_hint_text">Email/Phone number</string>
+    <string name="account_hint_text">Email/Phone Number</string>
     <string name="login">Sign in</string>
-    <string name="basic_info">Basic information</string>
+    <string name="basic_info">Basic Information</string>
     <string name="next">Next</string>
     <string name="prev">Back</string>
-    <string name="forget_password"><u>Forget password</u></string>
+    <string name="forget_password"><u>Forgot Password</u></string>
     <string name="password">Password</string>
     <string name="password_hint_text">6~16 chars</string>
-    <string name="bad_authentication">Authentication failed, bad username or password supplied</string>
-    <string name="micloud_welcome_banner">XiaoMi Account</string>
+    <string name="bad_authentication">Authentication failed. Invalid Username or Password.</string>
+    <string name="micloud_welcome_banner">Xiaomi Account</string>
     <string name="micloud_welcome_skip_login"><u>Skip this step</u></string>
-    <string name="micloud_account_name">XiaoMi Account</string>
+    <string name="micloud_account_name">Xiaomi Account</string>
     <string name="micloud_title">MiCloud</string>
-    <string name="micloud_log_prompt">Sign in XiaoMi account</string>
+    <string name="micloud_log_prompt">Sign in Xiaomi Account</string>
     <string name="micloud_use_existing">Existing</string>
     <string name="micloud_reg_new">New</string>
     <string name="micloud_error_empty_username">User is blank</string>
     <string name="micloud_error_empty_pwd">Password is blank</string>
-    <string name="micloud_error_illegal_pwd">Illegal password</string>
+    <string name="micloud_error_illegal_pwd">Invalid password</string>
     <string name="micloud_input_email_prompt">Input your email</string>
     <string name="micloud_email">Email Address</string>
     <string-array name="new_account_types">
         <!-- account types available for new users, keep the order consistent among different locales-->
-        <item>Register via phone number (Recommended)</item>
+        <item>Register via Phone Number (Recommended)</item>
         <item>Register via Email</item>
     </string-array>
-    <string name="micloud_input_password_prompt">Input password</string>
-    <string name="micloud_password_confirm_hint">Confirm password</string>
+    <string name="micloud_input_password_prompt">Input Password</string>
+    <string name="micloud_password_confirm_hint">Confirm Password</string>
     <string name="micloud_password_req_notice">
         8~16 chars, contains digits, alphabet letters, case sensitive
     </string>
     <string name="micloud_password_error_inconsistent">Passwords mismatch</string>
-    <string name="micloud_val_sms_alert">An SMS is to be sent to validate your phone number, continue?</string>
+    <string name="micloud_val_sms_alert">An SMS will be sent to validate your phone number. Continue?</string>
     <string name="micloud_error_email">Invalid Email</string>
-    <string name="micloud_account">XiaoMi account</string>
+    <string name="micloud_account">Xiaomi account</string>
     <string name="micloud_activing_account">Activating your account</string>
     <string name="micloud_waiting">Waiting...</string>
     <string name="micloud_account_not_actived">Account not activated</string>
     <string name="micloud_active_email_visit">Visit
         <xliff:g id="email">%s</xliff:g>
     </string>
-    <string name="micloud_click_email_to_valid">Click the activation link in your inbox</string>
+    <string name="micloud_click_email_to_valid">Click the activation link in your Inbox</string>
     <string name="micloud_resend_active_email">Re-send activation email</string>
     <string name="micloud_about">
         <u>More about MiCloud</u>
     </string>
-    <string name="micloud_delete_account">Revoke account</string>
-    <string name="micloud_active_email_sent_1">We have send an activation link to your Email: </string>
+    <string name="micloud_delete_account">Delete account</string>
+    <string name="micloud_active_email_sent_1">We have sent an activation link to your Email: </string>
     <string name="micloud_active_email_sent_2"></string>
     <string name="micloud_click_email">Click the link in the email to activate your Xiaomi Account</string>
     <string name="completed">Finish</string>
     <string name="header_data_and_synchronization">Data &amp; synchronization</string>
-    <string name="sync_one_time_sync">Touch to sync（
+    <string name="sync_one_time_sync">Click to sync（
         <xliff:g id="LAST_SYNC_TIME">
             %1$s
         </xliff:g>)
     </string>
-    <string name="title_login">Sign in XiaoMi account</string>
-    <string name="title_reg">Sing up XiaoMi account</string>
-    <string name="title_activate">Activate your XiaoMi account</string>
+    <string name="title_login">Sign in Xiaomi Account</string>
+    <string name="title_reg">Sign up Xiaomi Account</string>
+    <string name="title_activate">Activate your Xiaomi Account</string>
     <string name="micloud_account_label">Account:
         <xliff:g id="name">
             %1$s
         </xliff:g>
     </string>
-    <string name="sync_settings">Sync settings</string>
+    <string name="sync_settings">Sync and Cloud Services</string>
     <string name="email_already_be_used">Email address already be used</string>
     <string name="error_no_sms_service">SMS service not available</string>
-    <string name="reg_by_email_failure">Register failed:
+    <string name="reg_by_email_failure">Registration failed:
         <xliff:g id="reason">
             %1$s
         </xliff:g>
     </string>
     <string name="unactivated_user">Unactivated</string>
-    <string name="reg_failed">Register failed</string>
+    <string name="reg_failed">Registration failed</string>
     <string name="login_failed">Sign in failed</string>
     <string name="error_network">Network error</string>
     <string name="error_dup_phone">Phone has been registered</string>
@@ -88,7 +88,7 @@
             %1$s
         </xliff:g>
     </string>
-    <string name="quick_login_title">Authentication is required, please input your password</string>
+    <string name="quick_login_title">Authentication is required. Please input your password</string>
     <string name="account_name">Account:
         <xliff:g id="account">
             %1$s
@@ -99,15 +99,15 @@
     <string name="alert_title_remove_account">Delete Account</string>
     <string name="remove_account_notice">What would you like to do with the previously synced Messages, Contacts, Call logs, and notes on your device?</string>
     <string name="data_keep_in_phone">Keep on My device</string>
-    <string name="data_wipe_from_phone">Delete from My device</string>
-    <string name="login_notice">Sign in...</string>
+    <string name="data_wipe_from_phone">Delete from My Device</string>
+    <string name="login_notice">Signing in...</string>
     <string name="login_retry">Retry</string>
     <string name="data_sync_notice">Use your Xiaomi account to sync Messages, Contacts and other data. Meanwhile, Enjoy the cloud services.</string>
-    <string name="sync_dspt">Use XiaoMi account to sync data and enable cloud services</string>
-    <string name="sync_sub_dspt">An Sms may be sent to activate the service</string>
-    <string name="send_sms_for_sync_title">Sync service not activated</string>
-    <string name="send_sms_for_sync_notice">An activate SMS need to be sent, continue?</string>
-    <string name="failed_to_send_activate_email">Failed to send activate email.</string>
+    <string name="sync_dspt">Enable sync and cloud services</string>
+    <string name="sync_sub_dspt">An SMS may be sent to activate the service</string>
+    <string name="send_sms_for_sync_title">Sync Service Not Activated</string>
+    <string name="send_sms_for_sync_notice">An activate SMS need to be sent to activate sync. Do you want to continue?</string>
+    <string name="failed_to_send_activate_email">Failed to send activation email.</string>
     <string name="access_denied">Access denied</string>
     <string name="micloud_on_pc_notice">Visit i.xiaomi.com\nto manage your data</string>
 
@@ -115,26 +115,28 @@
     <string name="sync_off">Off</string>
 
     <string name="btn_activate">Activate</string>
-    <string name="no_sim">No sim, sync service is unavailable</string>
-    <string name="sim_changed_notification_content">SIM unactivated, please reactivate</string>
+    <string name="no_sim">No SIM card: sync service is unavailable</string>
+    <string name="sim_changed_notification_content">SIM card unactivated. Please reactivate</string>
     <string name="activating">Activating...</string>
-    <string name="check_phone_error_title">Failed to enable sync service</string>
+    <string name="check_phone_error_title">Failed to enable Sync Service</string>
     <string name="check_phone_io_error">Network error</string>
 
-    <string name="other_settings">Other settings</string>
-    <string name="find_device">Find device</string>
-    <string name="find_device_check_phone_error_title">Failed to enable find-device</string>
+    <string name="other_settings">Other Settings</string>
+    <string name="find_device">Find Device</string>
+    <string name="find_device_check_phone_error_title">Failed to enable Find Device</string>
     <string name="find_device_enabling">Turning on...</string>
     <string name="find_device_disabling">Turning off...</string>
-    <string name="enable_find_device_error"><xliff:g id="reason">%1$s</xliff:g>, failed to enable find-device</string>
-    <string name="disable_find_device_error"><xliff:g id="reason">%1$s</xliff:g>, failed to disable find-device</string>
+    <string name="enable_find_device_error"><xliff:g id="reason">%1$s</xliff:g>, failed to enable Find Device</string>
+    <string name="disable_find_device_error"><xliff:g id="reason">%1$s</xliff:g>, failed to disable Find Device</string>
     <string name="find_device_error_network">Network unavailable</string>
     <string name="find_device_error_server">Server error</string>
     <string name="find_device_success_title">Find device is enabled</string>
-    <string name="find_device_notice">When you cannot find your phone, visit\ni.xiaomi.com\nto find, lock it, or wipe the data</string>
+    <string name="find_device_notice_p1">When you cannot find your phone, please visit</string>
+    <string name="find_device_notice_p2">i.xiaomi.com</string>
+    <string name="find_device_notice_p3">to find, lock it, or wipe the data</string>
     <string name="i_know">I know</string>
     <string name="find_device_disabled_title">Find device disabled</string>
-    <string name="find_device_disabled_notice">You can reopen it via\nSettings -> Accounts &amp; sync\n-> Xiaomi Account</string>
+    <string name="find_device_disabled_notice">You can reopen Find Device via\nSettings -> Accounts &amp; sync\n-> Xiaomi Account</string>
 
     <string name="user_agreement_p1">By signing in, you are agreeing to\n the&#160;</string>
     <string name="user_agreement_p2">Xiaomi Terms of Service</string>
