--- a/src/packages/apps/BugReport/res/values/strings.xml
+++ b/src/packages/apps/BugReport/res/values/strings.xml
@@ -13,11 +13,11 @@
     <string name="err_type">Feedback type</string>
     <string name="err_type_reboot">System reboots</string>
     <string name="err_type_force_close">Force close</string>
-    <string name="err_type_network">Network issue</string>
+    <string name="err_type_network">Network issues</string>
     <string name="err_type_others">Others</string>
-    <string name="err_type_power_consuming">Power consuming</string>
-    <string name="err_type_call">Call issue</string>
-    <string name="err_type_suggestion">Suggestion</string>
+    <string name="err_type_power_consuming">Power consumption</string>
+    <string name="err_type_call">Call issues</string>
+    <string name="err_type_suggestion">Suggestions</string>
     <string name="err_type_data_lost">Data lost</string>
     <string name="status_msg_pending_upload">%d feedbacks are uploading&#8230;</string>
     <string name="status_msg_collecting_log">Collecting logs</string>
