--- a/src/frameworks/miui/core/res/res/values/strings.xml
+++ b/src/frameworks/miui/core/res/res/values/strings.xml
@@ -60,17 +60,21 @@
     <string name="all_resources">All</string>
     <string name="resource_default_name">Resource</string>
     <string name="resource_detail">Details</string>
-    <string name="resource_import_request">Import Resources</string>
-    <string name="resource_import_success_num">Success importing %1$d resources</string>
-    <string name="resource_import_complete">Resources importing complete</string>
-    <string name="resource_import_info">Click ok to import resources, click no to exit</string>
-    <string name="resource_import_continue_info">Detected uncomplete resource importing task，click ok to import resources, click no to exit</string>
+    <string name="theme_update_request_title">Theme upgrade</string>
+    <string name="theme_update_request_content">The new format of theme package is needed, the upgrade process may take longe time. And theme packages which is not downloaded from theme market is no longer usable, please click OK to upgrade now.</string>
+    <string name="theme_update_request_continue_content">The last upgrade process for theme packages was not completed, whether to continue now?</string>
+    <string name="theme_updating_title">Upgrading themes</string>
+    <string name="theme_updating_precontent">Prepareing, please wait...</string>
+    <string name="theme_updating_content">Upgrading %1$d/%2$d, please be patient</string>
+    <string name="theme_update_complete_title">Upgrade Finished</string>
+    <string name="theme_update_complete_content_success">%1$d successed</string>
+    <string name="theme_update_complete_content_fail">, %1$d failed</string>
 
     <string name="resource_selected_number">Selected %1$d resource(s)</string>
     <string name="resource_delete_all">Are you sure to delete %1$d selected resources?</string>
     <string name="resource_can_not_selected">%1$s can not be selected!</string>
     <string name="resource_system_title">System resources</string>
-    <string name="resource_downloaded_title">Downlaoded resources</string>
+    <string name="resource_downloaded_title">Downloaded resources</string>
 
     <string name="resource_see_more">See more</string>
 
@@ -78,6 +82,7 @@
     <string name="resource_get_auth_checking">Checking authorization...</string>
     <string name="resource_get_auth_retrieving">Retrieving authorization...</string>
     <string name="resource_get_auth_failed">Retrive authorization failed.</string>
+    <string name="resource_get_auth_missing">The theme is not downloaded from official market, please download similar ones from official market.</string>
 
     <string name="processing">Processing ...</string>
 
