--- a/src/packages/apps/Transfer/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/Transfer/res/values-zh-rCN/strings.xml
@@ -18,7 +18,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- 从其它手机导入联系人 -->
-    <string name="app_name">蓝牙导联系人</string>
+    <string name="app_name">传送门</string>
     <string name="device_brand_title">选择手机品牌</string>
     <string name="device_version_title">选择手机型号</string>
     <string name="device_list_title">选择您的手机</string>
