--- a/src/frameworks/miui/core/res/res/values-zh-rCN/strings.xml
+++ b/src/frameworks/miui/core/res/res/values-zh-rCN/strings.xml
@@ -60,11 +60,15 @@
     <string name="all_resources">全部</string>
     <string name="resource_default_name">资源</string>
     <string name="resource_detail">详细信息</string>
-    <string name="resource_import_request">导入资源</string>
-    <string name="resource_import_success_num">成功导入了%1$d个资源</string>
-    <string name="resource_import_complete">资源导入完成</string>
-    <string name="resource_import_info">点击确定导入资源，点击取消退出</string>
-    <string name="resource_import_continue_info">检测到上次导入未完成，是否继续导入？点击确定导入资源，点击取消退出</string>
+    <string name="theme_update_request_title">升级主题</string>
+    <string name="theme_update_request_content">新版主题客户端需要对主题包进行升级，升级时间可能较长。主题市场未收录的主题包在升级后将不能使用，现在升级请点击确定。</string>
+    <string name="theme_update_request_continue_content">检测到上次升级主题包未完成，是否继续升级？</string>
+    <string name="theme_updating_title">正在升级主题</string>
+    <string name="theme_updating_precontent">正在准备升级，请稍后</string>
+    <string name="theme_updating_content">正在升级第%1$d个主题，共%2$d个，请耐心等待</string>
+    <string name="theme_update_complete_title">升级结束</string>
+    <string name="theme_update_complete_content_success">%1$d个主题升级成功</string>
+    <string name="theme_update_complete_content_fail">，%1$d个未成功</string>
 
     <string name="resource_selected_number">已选择%1$d项</string>
     <string name="resource_delete_all">确认要删除所选的%1$d项资源吗?</string>
@@ -79,6 +83,7 @@
     <string name="resource_get_auth_checking">正在检验授权</string>
     <string name="resource_get_auth_retrieving">正在获取授权</string>
     <string name="resource_get_auth_failed">获取授权失败</string>
+    <string name="resource_get_auth_missing">该主题不是从官方市场下载，请在官方市场下载同类主题</string>
 
     <string name="processing">处理中...</string>
 
