--- a/src/frameworks/miui/core/res/res/values-zh-rTW/strings.xml
+++ b/src/frameworks/miui/core/res/res/values-zh-rTW/strings.xml
@@ -60,11 +60,15 @@
     <string name="all_resources">全部</string>
     <string name="resource_default_name">資源</string>
     <string name="resource_detail">詳細信息</string>
-    <string name="resource_import_request">導入資源</string>
-    <string name="resource_import_success_num">成功導入了%1$d個資源</string>
-    <string name="resource_import_complete">資源導入完成</string>
-    <string name="resource_import_info">點擊確定導入資源，點擊取消退出</string>
-    <string name="resource_import_continue_info">檢測到上次導入未完成，是否繼續導入？點擊確定導入資源，點擊取消退出</string>
+    <string name="theme_update_request_title">升級主題</string>
+    <string name="theme_update_request_content">新版主題客戶端需要對主題包進行升級，升級時間可能較長。主題市場未收錄的主題包在升級後將不能使用，現在升級請點擊確定。 </string>
+    <string name="theme_update_request_continue_content">檢測到上次升級主題包未完成，是否繼續升級？</string>
+    <string name="theme_updating_title">正在升級主題</string>
+    <string name="theme_updating_precontent">正在準備升級，請稍後</string>
+    <string name="theme_updating_content">正在升級第%1$d個主題，共%2$d個，請耐心等待</string>
+    <string name="theme_update_complete_title">升級結束</string>
+    <string name="theme_update_complete_content_success">%1$d個主題升級成功</string>
+    <string name="theme_update_complete_content_fail">，%1$d個未成功</string>
 
     <string name="resource_selected_number">已選擇%1$d項</string>
     <string name="resource_delete_all">確認要刪除所選的%1$d項資源嗎?</string>
@@ -79,6 +83,7 @@
     <string name="resource_get_auth_checking">正在檢驗授權</string>
     <string name="resource_get_auth_retrieving">正在獲取授權</string>
     <string name="resource_get_auth_failed">獲取授權失敗</string>
+    <string name="resource_get_auth_missing">該主題不是從官方市場下載，請在官方市場下載同類主題</string>
 
     <string name="processing">處理中...</string>
 
