--- a/src/packages/apps/MiuiSettings/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values-zh-rCN/strings.xml
@@ -331,4 +331,5 @@
     <string name="vpn_configure">配置</string>
     <string name="sync_wifi_label">WLAN设置</string>
 
+    <string name="milicenter_settings">米币中心</string>
 </resources>
