--- a/src/packages/apps/MiuiSettings/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values-zh-rTW/strings.xml
@@ -331,4 +331,6 @@
     <string name="vpn_safe">安全</string>
     <string name="vpn_configure">配置</string>
     <string name="sync_wifi_label">WLAN設置</string>
+
+    <string name="milicenter_settings">米幣中心</string>
 </resources>
