--- a/src/packages/apps/MiuiSettings/res/values/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values/strings.xml
@@ -358,4 +358,6 @@ including personal data (i.e. passwords and credit card numbers). Use this input
     <string name="vpn_safe">Security</string>
     <string name="vpn_configure">Configuration</string>
     <string name="sync_wifi_label">WLAN settings</string>
+
+    <string name="milicenter_settings">Xiaomi Dollar Center</string>
 </resources>
