--- a/src/packages/apps/MiuiGallery/res/values/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values/strings.xml
@@ -91,7 +91,24 @@
 
     <!-- Details dialog "OK" button. Dismisses dialog. -->
     <string name="delete">Delete</string>
+
+    <!-- Are you sure to delete 3 items？ -->
     <string name="confirm_delete">Are you sure to delete <xliff:g id="ITEM"> %s</xliff:g> items?</string>
+
+    <!-- Are you sure to delete 2 albums (including 6 items)？ -->
+    <string name="confirm_delete_album">Are you sure to delete <xliff:g id="ALBUM"> %s</xliff:g> albums (including <xliff:g id="ITEM">%s</xliff:g> items)?</string>
+
+    <!-- "Camera" album is system album, are you sure to delete？ -->
+    <string name="confirm_delete_system_album"> <xliff:g id="SYSTEM_ALBUM"> %s</xliff:g> album is system album, are you sure to delete?</string>
+
+    <!-- Are you sure to delete 2 pictures, 3 folders (including 7 pictures, 1 videos)？ -->
+    <string name="confirm_delete_folders_and_pictures">Are you sure to delete <xliff:g id="FOLDER_PICTURE"> %s</xliff:g>?</string>
+    <string name="confirm_delete_pictures"><xliff:g id="PICTURE"> %s</xliff:g> pictures</string>
+    <string name="confirm_delete_folders_including"><xliff:g id="FOLDER"> %s</xliff:g> folders (including <xliff:g id="INCLUDING">%s</xliff:g>)</string>
+    <string name="confirm_delete_videos"><xliff:g id="VIDEO"> %s</xliff:g> videos</string>
+    <!-- Are you sure to delete 1 folders (including 0 item)？ -->
+    <string name="confirm_delete_including_null">0 item</string>
+
     <string name="cancel">Cancel</string>
     <string name="share">Share</string>
 
@@ -253,7 +270,7 @@
 
     <string name="sd_explorer">Storage devices</string>
     <string name="cloud_albums">Cloud albums</string>
-    <string name="home_my_captured_items">my captured photo(s)</string>
+    <string name="home_my_captured_items">My captured photo(s)</string>
     <string name="all_media">"All photos"</string>
 
     <!-- A label on a button. The user clicks this button after he has
@@ -458,7 +475,7 @@
     <string name="sync_not_open">You can sync your mobile pictures to the cloud to automatically upload pictures to cloud management for better convenience.</string>
     <string name="login_account">Login Xiaomi Account</string>
     <string name="open_sync">Sync Now</string>
-    <string name="alert_message_initial_cloud">The system will automatically upload new and past photos and screenshots only where there is WLAN connection.</string>
+    <string name="alert_message_initial_cloud">System will automatically upload photos and screenshots when there is WLAN connection.</string>
     <string name="cloud_gallery_no_pictures">No pictures contained in your cloud album.</string>
     <string name="only_upload_in_charging">History images are uploaded only when charging; please charge your device.</string>
     <string name="no_network_connected">No network connected</string>
