--- a/src/packages/apps/ThemeManager/res/values/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="download_success">Download complete!</string>
 
     <string name="theme_importing">Importing themes</string>
+    <string name="theme_import_success">Import complete</string>
 </resources>
