--- a/src/packages/apps/Weather/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/Weather/res/values-zh-rTW/strings.xml
@@ -150,6 +150,47 @@
         <item>浮塵</item>3
     </array>
 
+    <array name="weather_details_key">
+        <item>暫缺</item>0
+        <item>適宜</item>1
+        <item>較適宜</item>2
+        <item>較不宜</item>3
+        <item>不宜</item>4
+        <item>極適宜</item>5
+        <item>中等</item>6
+        <item>最弱</item>7
+        <item>弱</item>8
+        <item>強</item>9
+
+        <item>很強</item>0
+        <item>涼</item>1
+        <item>舒適</item>2
+        <item>炎熱</item>3
+        <item>熱</item>4
+        <item>暖</item>5
+        <item>溫涼</item>6
+        <item>氣溫較低</item>7
+        <item>冷</item>8
+        <item>寒冷</item>9
+
+        <item>較舒適</item>0
+        <item>舒適</item>1
+        <item>較不舒適</item>2
+        <item>很不舒適_晴</item>3
+        <item>很不舒適_陰</item>4
+        <item>不宜_雨</item>5
+        <item>不宜_沙塵</item>6
+        <item>不宜_雪</item>7
+        <item>基本適宜</item>8
+        <item>適宜_晴</item>9
+
+        <item>適宜_多雲</item>0
+        <item>不太適宜</item>1
+        <item>很適宜</item>2
+        <item>不適宜</item>3
+        <item>壹般</item>4
+    </array>
+
     <array name="weather_image_tips">
         <item></item>
         <item></item>
@@ -234,125 +275,125 @@
     </array>
 
     <array name="weather_info_uv">
-        <item>暂缺</item>
+        <item>"0"</item>
         <item>現在暫時沒有紫外線指數的詳細資訊，請稍後再查看。</item>
-        <item>中等</item>
+        <item>"6"</item>
         <item>屬中等強度紫外線輻射天氣，外出時建議塗擦SPF高於15、PA+的防曬護膚品，戴帽子、太陽鏡。</item>
-        <item>最弱</item>
+        <item>"7"</item>
         <item>屬弱紫外線輻射天氣，無需特別防護。若長期在戶外，建議塗擦SPF在8-12之間的防曬護膚品。</item>
-        <item>弱</item>
+        <item>"8"</item>
         <item>紫外線強度較弱，建議出門前塗擦SPF在12-15之間、PA+的防曬護膚品。</item>
-        <item>強</item>
+        <item>"9"</item>
         <item>紫外線輻射強，建議塗擦SPF20左右、PA++的防曬護膚品。避免在10點至14點暴露於日光下。</item>
-        <item>很強</item>
+        <item>"10"</item>
         <item>紫外線輻射極強，建議塗擦SPF20以上、PA++的防曬護膚品，盡量避免暴露於日光下。</item>
     </array>
 
     <array name="weather_info_dress">
-        <item>暂缺</item>
+        <item>"0"</item>
         <item>現在暫時沒有穿衣指數的詳細資訊，請稍後再查看。</item>
-        <item>凉</item>
+        <item>"11"</item>
         <item>建議著薄型套裝等春秋過渡裝。年老體弱者宜著套裝。</item>
-        <item>舒适</item>
+        <item>"12"</item>
         <item>建議著薄型套裝等春秋過渡裝。年老體弱者宜著套裝。</item>
-        <item>炎热</item>
+        <item>"13"</item>
         <item>天氣炎熱，建議著短衫、短裙、短褲、薄型T恤衫、敞領短袖棉衫等清涼夏季服裝。</item>
-        <item>热</item>
+        <item>"14"</item>
         <item>天氣較熱，建議著短裙、短褲、短套裝、T恤等夏季服裝。年老體弱者宜著長袖襯衫和單褲。</item>
-        <item>暖</item>
+        <item>"15"</item>
         <item>較涼爽，建議著長袖襯褲等春秋過渡裝。體弱者宜著長袖襯衫和馬甲。</item>
-        <item>温凉</item>
+        <item>"16"</item>
         <item>較涼爽，建議著裌衣加薄羊毛衫等春秋服裝。體弱者宜著裌衣加羊毛衫。</item>
-        <item>气温较低</item>
+        <item>"17"</item>
         <item>天氣涼，建議著厚外套加毛衣等春秋服裝。年老體弱者宜著大衣、呢外套加羊毛衫。</item>
-        <item>冷</item>
+        <item>"18"</item>
         <item>天氣冷，建議著棉衣、皮夾克加羊毛衫等冬季服裝。年老體弱者宜著厚棉衣或冬大衣。</item>
-        <item>寒冷</item>
+        <item>"19"</item>
         <item>天氣冷，建議著棉衣、皮夾克加羊毛衫等冬季服裝。年老體弱者宜著厚棉衣或冬大衣。</item>
     </array>
 
     <array name="weather_info_msport">
-        <item>暂缺</item>
+        <item>"0"</item>
         <item>現在暫時沒有晨練指數的詳細資訊，請稍後再查看。</item>
-        <item>适宜</item>
+        <item>"1"</item>
         <item>天氣晴朗，空氣清新，是您晨練的大好時機，建議不同年齡段的人們積極參加戶外健身活動。</item>
-        <item>较适宜</item>
+        <item>"2"</item>
         <item>早晨氣象條件較適宜晨練，建議晨練著裝不要過於單薄，有風時選擇避風地點，以防感冒。</item>
-        <item>较不宜</item>
+        <item>"3"</item>
         <item>早晨天氣變化較大，較不宜晨練，若堅持晨練，請適當減少晨練時間，注意保暖並攜帶雨具。 </item>
-        <item>不宜</item>
+        <item>"4"</item>
         <item>早晨天氣很差，請避免戶外晨練，建議在室內做適當鍛煉，保持身體健康。 </item>
     </array>
 
     <array name="weather_info_comfort">
-        <item>暂缺</item>
+        <item>"0"</item>
         <item>現在暫時沒有舒適度指數的詳細資訊，請稍後再查看。</item>
-        <item>较舒适</item>
+        <item>"20"</item>
         <item>今日溫度較為穩定，天氣變化較小，較為舒適</item>
-        <item>舒适</item>
+        <item>"21"</item>
         <item>白天不太熱也不太冷，風力不大，相信您在這樣的天氣條件下，應會感到比較清爽和舒適。</item>
-        <item>较不舒适</item>
+        <item>"22"</item>
         <item>今天天氣變化較大，可能會令人有些不舒適。</item>
-        <item>很不舒适_晴</item>
+        <item>"23"</item>
         <item>白天天氣晴好，但溫度不夠適宜，您可能會感到不舒適。 </item>
-        <item>很不舒适_阴</item>
+        <item>"24"</item>
         <item>白天雖然天氣以陰為主，但由於天熱，加上濕度較大，您會感到很悶熱，很不舒適。 </item>
    </array>
 
     <array name="weather_info_wcar">
-        <item>暂缺</item>
+        <item>"0"</item>
         <item>現在暫時沒有洗車指數的詳細資訊，請稍後再查看。</item>
-        <item>适宜</item>
+        <item>"1"</item>
         <item>適宜洗車，未來持續兩天無雨天氣較好，適合擦洗汽車，藍天白雲、風和日麗將伴您的車子連日潔淨。</item>
-        <item>较适宜</item>
+        <item>"2"</item>
         <item>較適宜洗車，未來一天無雨，風力較小，擦洗一新的汽車至少能保持一天。</item>
-        <item>较不宜</item>
+        <item>"3"</item>
         <item>較不宜洗車，過去12小時有降雨，路面少量積水，如果執意擦洗汽車，要做好濺上泥水的心理準備。</item>
-        <item>不宜_雨</item>
+        <item>"25"</item>
         <item>不宜洗車，未來24小時內有雨，如果在此期間洗車，雨水和路上的泥水可能會再次弄髒您的愛車。</item>
-        <item>不宜_沙尘</item>
+        <item>"26"</item>
         <item>未來24小時內有沙塵天氣，如果在此期間洗車，極易很快蒙上新的灰塵。 </item>
-        <item>不宜_雪</item>
+        <item>"27"</item>
         <item>不宜洗車，未來24小時內有雪，如果在此期間洗車，雪水和路上的泥水可能會再次弄髒您的愛車。</item>
-        <item>不宜</item>
+        <item>"4"</item>
         <item>不宜洗車，未來24小時會有天氣變化，如果在此期間洗車，可能會再次弄髒您的愛車。</item>
     </array>
 
     <array name="weather_info_hung">
-        <item>暂缺</item>
+        <item>"0"</item>
         <item>現在暫時沒有晾曬指數的詳細資訊，請稍後再查看。</item>
-        <item>基本适宜</item>
+        <item>"28"</item>
         <item>天氣晴朗，溫度雖然不高，但午後溫暖的陽光仍能滿足你驅潮消霉殺菌的晾曬需求。</item>
-        <item>适宜_晴</item>
+        <item>"29"</item>
         <item>萬里無雲，光照充足，適宜晾曬。趕緊把久未見陽光的衣物搬出來吸收一下太陽的味道吧！</item>
-        <item>适宜_多云</item>
+        <item>"30"</item>
         <item>多雲，且氣溫偏高，適宜晾曬。</item>
-        <item>适宜</item>
+        <item>"1"</item>
         <item>天氣不錯，適宜晾曬。趕緊把久未見陽光的衣物般出來吸收一下太陽的味道吧。</item>
-        <item>较不宜</item>
+        <item>"3"</item>
         <item>偶爾的降雨可能會淋濕晾曬的衣物，不太適宜晾曬。請隨時注意天氣變化。</item>
-        <item>极适宜</item>
+        <item>"5"</item>
         <item>萬里無雲，光照充足，極適宜晾曬。抓緊時機把久未見陽光的衣物搬出來曬曬太陽吧！ </item>
-        <item>不宜</item>
+        <item>"4"</item>
         <item>有降水，不適宜晾曬。如果非晾曬不可，請在室內準備出充足的空間。 </item>
-        <item>不太适宜</item>
+        <item>"31"</item>
         <item>有降水，不適宜晾曬。如果非晾曬不可，請在室內準備出充足的空間。 </item>
     </array>
 
     <array name="weather_info_travel">
-        <item>暂缺</item>
+        <item>"0"</item>
         <item>現在暫時沒有旅遊指數的詳細資訊，請稍後再查看。</item>
-        <item>很适宜</item>
+        <item>"32"</item>
         <item>天氣晴朗，風和日麗，溫度適宜，是個好天氣哦。這樣的天氣很適宜旅遊，您可以盡情地享受大自然的風光。</item>
-        <item>较适宜</item>
+        <item>"2"</item>
         <item>今天氣候溫和，天氣變化不大，較適宜旅遊，是出行遊玩的好時機。</item>
-        <item>适宜</item>
+        <item>"1"</item>
         <item>今天氣候溫和，天氣變化不大，較適宜旅遊，是出行遊玩的好時機。</item>
-        <item>较不宜</item>
+        <item>"3"</item>
         <item>天氣變化較大，會給出行帶來麻煩，建議還是多選擇在室內活動！</item>
-        <item>不适宜</item>
+        <item>"33"</item>
         <item>天氣變化很大，會給出行帶來很多麻煩，建議還是多選擇在室內活動！</item>
-        <item>一般</item>
+        <item>"34"</item>
         <item>天氣晴朗，萬里無雲，溫度稍低，而且風稍微大，讓你感覺有些冷，會對外出有一定影響，外出注意防風保暖。</item>
     </array>
 
