--- a/src/packages/apps/MiuiGallery/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values-zh-rCN/strings.xml
@@ -43,7 +43,24 @@
     <string name="set_image" msgid="2331476809308010401">"应用为"</string>
     <string name="camera_setas_wallpaper" msgid="797463183863414289">"壁纸"</string>
     <string name="delete" msgid="2839695998251824487">"删除"</string>
-    <string name="confirm_delete" msgid="7358770022173660511">"确认要删除<xliff:g id="ITEM"> %s</xliff:g>项吗？"</string>
+
+    <!-- 确认要删除1项吗？ -->
+    <string name="confirm_delete" msgid="7358770022173660511">"确认要删除<xliff:g id="ITEM"> %s</xliff:g>吗？"</string>
+
+    <!-- 确定要删除2个图册(包含4张图片)吗？ -->
+    <string name="confirm_delete_album">确定要删除<xliff:g id="ALBUM"> %s</xliff:g>个图册(包含<xliff:g id="ITEM"> %s</xliff:g>张图片)吗?</string>
+
+    <!-- “相机”图册为系统图册,确定删除吗？ -->
+    <string name="confirm_delete_system_album"> <xliff:g id="SYSTEM_ALBUM"> %s</xliff:g>图册为系统图册, 确定删除吗?</string>
+
+    <!-- 确定要删除3张图片,2个目录(包含4张图片,3个视频)吗？ -->
+    <string name="confirm_delete_folders_and_pictures">确定要删除<xliff:g id="FOLDER_PICTURE"> %s</xliff:g>吗?</string>
+    <string name="confirm_delete_pictures"><xliff:g id="PICTURE"> %s</xliff:g>张图片</string>
+    <string name="confirm_delete_folders_including"><xliff:g id="FOLDER"> %s</xliff:g>个目录(包含<xliff:g id="INCLUDING"> %s</xliff:g>)</string>
+    <string name="confirm_delete_videos"><xliff:g id="VIDEO"> %s</xliff:g>个视频</string>
+    <!-- 确定要删除3张图片,2个目录(包含0个文件)吗？ -->
+    <string name="confirm_delete_including_null">0个文件</string>
+
     <string name="cancel" msgid="3637516880917356226">"取消"</string>
     <string name="share" msgid="3619042788254195341">"分享"</string>
     <string name="select_all" msgid="3403283025220282175">"全选"</string>
