--- a/src/packages/apps/ThemeManager/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values-zh-rCN/strings.xml
@@ -95,4 +95,5 @@
     <string name="download_success">下载成功</string>
 
     <string name="theme_importing">主题导入中</string>
+    <string name="theme_import_success">主题导入完成</string>
 </resources>
