--- a/src/packages/apps/ThemeManager/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values-zh-rTW/strings.xml
@@ -94,5 +94,5 @@
     <string name="download_success">下載成功</string>
 
     <string name="theme_importing">主題導入中</string>
-
+    <string name="theme_import_success">主題導入完成</string>
 </resources>
