--- a/src/packages/apps/Weather/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/Weather/res/values-zh-rCN/strings.xml
@@ -102,6 +102,28 @@
         <item>邮件</item>
     </array>
 
+    <array name="act_weather_main_listview_json_key">
+        <item>wind1</item>
+        <item>紫外线指数</item>
+        <item>穿衣指数</item>
+        <item>舒适度指数</item>
+        <item>洗车指数</item>
+        <item>晾晒指数</item>
+        <item>晨练指数</item>
+        <item>旅游指数</item>
+    </array>
+
+    <array name="act_weather_main_listview_key">
+        <item>风力:　　</item>
+        <item>紫外线:　</item>
+        <item>穿衣指数:</item>
+        <item>舒适指数:</item>
+        <item>洗车指数:</item>
+        <item>晾晒指数:</item>
+        <item>晨练指数:</item>
+        <item>旅游指数:</item>
+    </array>
+
     <array name="weather_image">
         <item>晴</item>0
         <item>多云</item>1
@@ -127,5 +149,261 @@
         <item>扬沙</item>1
         <item>冰雹</item>2
         <item>浮尘</item>3
+    </array>
+
+    <array name="weather_details_key">
+        <item>暂缺</item>0
+        <item>适宜</item>1
+        <item>较适宜</item>2
+        <item>较不宜</item>3
+        <item>不宜</item>4
+        <item>极适宜</item>5
+        <item>中等</item>6
+        <item>最弱</item>7
+        <item>弱</item>8
+        <item>强</item>9
+
+        <item>很强</item>0
+        <item>凉</item>1
+        <item>舒适</item>2
+        <item>炎热</item>3
+        <item>热</item>4
+        <item>暖</item>5
+        <item>温凉</item>6
+        <item>气温较低</item>7
+        <item>冷</item>8
+        <item>寒冷</item>9
+
+        <item>较舒适</item>0
+        <item>舒适</item>1
+        <item>较不舒适</item>2
+        <item>很不舒适_晴</item>3
+        <item>很不舒适_阴</item>4
+        <item>不宜_雨</item>5
+        <item>不宜_沙尘</item>6
+        <item>不宜_雪</item>7
+        <item>基本适宜</item>8
+        <item>适宜_晴</item>9
+
+        <item>适宜_多云</item>0
+        <item>不太适宜</item>1
+        <item>很适宜</item>2
+        <item>不适宜</item>3
+        <item>一般</item>4
+    </array>
+
+ <array name="weather_image_tips">
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
+        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
+        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
+        <item>外出的话建议带上伞，小心淋雨噢！</item>
+        <item>外出的话建议带上伞，小心淋雨噢！</item>
+        <item>今天雨真大，出门记得带上伞，别淋湿感冒罗^^</item>
+        <item>今天雨不小，出门记得带上伞噢！</item>
+        <item>细雨纷纷，外出的话建议带上伞噢！</item>
+        <item>雨雪天气，建议还是带伞出门噢！天气寒冷注意多加衣物。</item>
+        <item>雪很大，出门记得戴上帽子和围巾噢！</item>
+        <item>今天会有雪，出门记得戴上帽子和围巾噢。</item>
+        <item>雪很大，出门记得戴上帽子和围巾噢！</item>
+        <item>雪不小，出门记得戴上帽子和围巾噢！</item>
+        <item>飞雪飘飘，出门记得戴上帽子和围巾噢！</item>
+        <item>风沙太强了，如果出门建议戴好帽子和口罩。</item>
+        <item>风沙很强，如果出门建议戴好帽子和口罩。</item>
+        <item>有风沙，如果出门建议戴好帽子和口罩。</item>
+        <item>有风沙，如果出门建议戴好帽子和口罩。</item>
+        <item>难得一见的冰雹天气，外出走路要小心！</item>
+    </array>
+
+    <array name="weather_sms_content">
+        <item>适合锻炼和出游。记得做好防晒措施。</item>
+        <item>多云的天气。不会有雨水。</item>
+        <item>由于天气可能会有变化，不太建议长时间外出噢。</item>
+        <item>外出请注意车辆，如果开车请小心行驶:)</item>
+        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
+        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
+        <item>雨太大了，出门记得带上伞，雨鞋也最好穿上。</item>
+        <item>外出的话建议带上伞，小心淋雨噢！</item>
+        <item>外出的话建议带上伞，小心淋雨噢！</item>
+        <item>今天雨真大，出门记得带上伞，别淋湿感冒罗^^</item>
+        <item>今天雨不小，出门记得带上伞噢！</item>
+        <item>细雨纷纷，外出的话建议带上伞噢！</item>
+        <item>雨雪天气，建议还是带伞出门噢！天气寒冷注意多加衣物。</item>
+        <item>雪很大，出门记得戴上帽子和围巾噢！</item>
+        <item>今天会有雪，出门记得戴上帽子和围巾噢。</item>
+        <item>雪很大，出门记得戴上帽子和围巾噢！</item>
+        <item>雪不小，出门记得戴上帽子和围巾噢！</item>
+        <item>飞雪飘飘，出门记得戴上帽子和围巾噢！</item>
+        <item>风沙太强了，如果出门建议戴好帽子和口罩。</item>
+        <item>风沙很强，如果出门建议戴好帽子和口罩。</item>
+        <item>有风沙，如果出门建议戴好帽子和口罩。</item>
+        <item>有风沙，如果出门建议戴好帽子和口罩。</item>
+        <item>难得一见的冰雹天气，外出走路要小心！</item>
+    </array>
+
+    <array name="weather_sms_addons">
+        <item>今天@天气$。</item>0
+        <item>温度%。</item>0
+        <item>出门记得带伞。</item>1
+        <item>衣服湿了的话回家要及时换，小心感冒噢:)</item>2
+        <item>外面晒了衣服记得及时收，呵呵...</item>3
+        <item>出门尽量别开车了，安全第一。</item>4
+        <item>开车路上注意安全，别开太快了。</item>5
+        <item>出门小心点，路滑。</item>6
+        <item>路上不要太急，小心摔跤。</item>7
+        <item>出门一定要注意安全。</item>8
+        <item>能不出门就别出门了啊。</item>9
+        <item>今天挺晒的，出门记得涂防晒、戴墨镜或者撑个伞什么的...</item>0
+        <item>今天挺晒的，能不出门就不出门吧。</item>1
+        <item>今天风大，出门捂严实点^^</item>2
+        <item>貌似空气不好，要有口罩就戴上啊。</item>3
+        <item>出门捂严实点。</item>4
+        <item>记得戴口罩帽子啊^^</item>5
+        <item>出门戴手套戴帽子啊。</item>6
+        <item>气候炎热，多喝水，不过冰水要少喝呀。</item>7
+        <item>房间保持通风，空调少吹、预防中暑！</item>8
+        <item>注意保暖，多穿点。</item>9
+        <item>这几天温度低，出门捂严实点。</item>0
+        <item>别爱漂亮穿太少啊，身体要紧:D</item>1
+        <item>最近看到有卖耳罩的，又暖和又好看，有的话出门戴上:)</item>2
+        <item>天气应该不错，太阳不大可以出门走动走动噢。</item>3
+        <item>出门走走吧，晒晒太阳:)</item>4
+        <item>可以把被子拿出来晒晒，呵呵...</item>5
+        <item>天气可能有些阴凉，出门多穿些。</item>6
+    </array>
+
+    <array name="weather_info_uv">
+        <item>"0"</item>
+        <item>现在暂时没有紫外线指数的详细信息，请稍后再查看。</item>
+        <item>"6"</item>
+        <item>属中等强度紫外线辐射天气，外出时建议涂擦SPF高于15、PA+的防晒护肤品，戴帽子、太阳镜。</item>
+        <item>"7"</item>
+        <item>属弱紫外线辐射天气，无需特别防护。若长期在户外，建议涂擦SPF在8-12之间的防晒护肤品。</item>
+        <item>"8"</item>
+        <item>紫外线强度较弱，建议出门前涂擦SPF在12-15之间、PA+的防晒护肤品。</item>
+        <item>"9"</item>
+        <item>紫外线辐射强，建议涂擦SPF20左右、PA++的防晒护肤品。避免在10点至14点暴露于日光下。</item>
+        <item>"10"</item>
+        <item>紫外线辐射极强，建议涂擦SPF20以上、PA++的防晒护肤品，尽量避免暴露于日光下。</item>
+    </array>
+
+    <array name="weather_info_dress">
+        <item>"0"</item>
+        <item>现在暂时没有穿衣指数的详细信息，请稍后再查看。</item>
+        <item>"11"</item>
+        <item>建议着薄型套装等春秋过渡装。年老体弱者宜着套装。</item>
+        <item>"12"</item>
+        <item>建议着薄型套装等春秋过渡装。年老体弱者宜着套装。</item>
+        <item>"13"</item>
+        <item>天气炎热，建议着短衫、短裙、短裤、薄型T恤衫、敞领短袖棉衫等清凉夏季服装。</item>
+        <item>"14"</item>
+        <item>天气较热，建议着短裙、短裤、短套装、T恤等夏季服装。年老体弱者宜着长袖衬衫和单裤。</item>
+        <item>"15"</item>
+        <item>较凉爽，建议着长袖衬裤等春秋过渡装。体弱者宜着长袖衬衫和马甲。</item>
+        <item>"16"</item>
+        <item>较凉爽，建议着夹衣加薄羊毛衫等春秋服装。体弱者宜着夹衣加羊毛衫。</item>
+        <item>"17"</item>
+        <item>天气凉，建议着厚外套加毛衣等春秋服装。年老体弱者宜着大衣、呢外套加羊毛衫。</item>
+        <item>"18"</item>
+        <item>天气冷，建议着棉衣、皮夹克加羊毛衫等冬季服装。年老体弱者宜着厚棉衣或冬大衣。</item>
+        <item>"19"</item>
+        <item>天气冷，建议着棉衣、皮夹克加羊毛衫等冬季服装。年老体弱者宜着厚棉衣或冬大衣。</item>
+    </array>
+
+    <array name="weather_info_msport">
+        <item>"0"</item>
+        <item>现在暂时没有晨练指数的详细信息，请稍后再查看。</item>
+        <item>"1"</item>
+        <item>天气晴朗，空气清新，是您晨练的大好时机，建议不同年龄段的人们积极参加户外健身活动。</item>
+        <item>"2"</item>
+        <item>早晨气象条件较适宜晨练，建议晨练着装不要过于单薄，有风时选择避风地点，以防感冒。</item>
+        <item>"3"</item>
+        <item>早晨天气变化较大，较不宜晨练，若坚持晨练，请适当减少晨练时间，注意保暖并携带雨具。 </item>
+        <item>"4"</item>
+        <item>早晨天气很差，请避免户外晨练，建议在室内做适当锻炼，保持身体健康。 </item>
+    </array>
+
+    <array name="weather_info_comfort">
+        <item>"0"</item>
+        <item>现在暂时没有舒适度指数的详细信息，请稍后再查看。</item>
+        <item>"20"</item>
+        <item>今日温度较为稳定，天气变化较小，较为舒适</item>
+        <item>"21"</item>
+        <item>白天不太热也不太冷，风力不大，相信您在这样的天气条件下，应会感到比较清爽和舒适。</item>
+        <item>"22"</item>
+        <item>今天天气变化较大，可能会令人有些不舒适。</item>
+        <item>"23"</item>
+        <item>白天天气晴好，但温度不够适宜，您可能会感到不舒适。 </item>
+        <item>"24"</item>
+        <item>白天虽然天气以阴为主，但由于天热，加上湿度较大，您会感到很闷热，很不舒适。 </item>
+   </array>
+
+    <array name="weather_info_wcar">
+        <item>"0"</item>
+        <item>现在暂时没有洗车指数的详细信息，请稍后再查看。</item>
+        <item>"1"</item>
+        <item>适宜洗车，未来持续两天无雨天气较好，适合擦洗汽车，蓝天白云、风和日丽将伴您的车子连日洁净。</item>
+        <item>"2"</item>
+        <item>较适宜洗车，未来一天无雨，风力较小，擦洗一新的汽车至少能保持一天。</item>
+        <item>"3"</item>
+        <item>较不宜洗车，过去12小时有降雨，路面少量积水，如果执意擦洗汽车，要做好溅上泥水的心理准备。</item>
+        <item>"25"</item>
+        <item>不宜洗车，未来24小时内有雨，如果在此期间洗车，雨水和路上的泥水可能会再次弄脏您的爱车。</item>
+        <item>"26"</item>
+        <item>未来24小时内有沙尘天气，如果在此期间洗车，极易很快蒙上新的灰尘。 </item>
+        <item>"27"</item>
+        <item>不宜洗车，未来24小时内有雪，如果在此期间洗车，雪水和路上的泥水可能会再次弄脏您的爱车。</item>
+        <item>"4"</item>
+        <item>不宜洗车，未来24小时会有天气变化，如果在此期间洗车，可能会再次弄脏您的爱车。</item>
+    </array>
+
+    <array name="weather_info_hung">
+        <item>"0"</item>
+        <item>现在暂时没有晾晒指数的详细信息，请稍后再查看。</item>
+        <item>"28"</item>
+        <item>天气晴朗，温度虽然不高，但午后温暖的阳光仍能满足你驱潮消霉杀菌的晾晒需求。</item>
+        <item>"29"</item>
+        <item>万里无云，光照充足，适宜晾晒。赶紧把久未见阳光的衣物搬出来吸收一下太阳的味道吧！</item>
+        <item>"30"</item>
+        <item>多云，且气温偏高，适宜晾晒。</item>
+        <item>"1"</item>
+        <item>天气不错，适宜晾晒。赶紧把久未见阳光的衣物般出来吸收一下太阳的味道吧。</item>
+        <item>"3"</item>
+        <item>偶尔的降雨可能会淋湿晾晒的衣物，不太适宜晾晒。请随时注意天气变化。</item>
+        <item>"5"</item>
+        <item>万里无云，光照充足，极适宜晾晒。抓紧时机把久未见阳光的衣物搬出来晒晒太阳吧！ </item>
+        <item>"4"</item>
+        <item>有降水，不适宜晾晒。如果非晾晒不可，请在室内准备出充足的空间。 </item>
+        <item>"31"</item>
+        <item>有降水，不适宜晾晒。如果非晾晒不可，请在室内准备出充足的空间。 </item>
+    </array>
+
+    <array name="weather_info_travel">
+        <item>"0"</item>
+        <item>现在暂时没有旅游指数的详细信息，请稍后再查看。</item>
+        <item>"32"</item>
+        <item>天气晴朗，风和日丽，温度适宜，是个好天气哦。这样的天气很适宜旅游，您可以尽情地享受大自然的风光。</item>
+        <item>"2"</item>
+        <item>今天气候温和，天气变化不大，较适宜旅游，是出行游玩的好时机。</item>
+        <item>"1"</item>
+        <item>今天气候温和，天气变化不大，较适宜旅游，是出行游玩的好时机。</item>
+        <item>"3"</item>
+        <item>天气变化较大，会给出行带来麻烦，建议还是多选择在室内活动！</item>
+        <item>"33"</item>
+        <item>天气变化很大，会给出行带来很多麻烦，建议还是多选择在室内活动！</item>
+        <item>"34"</item>
+        <item>天气晴朗，万里无云，温度稍低，而且风稍微大，让你感觉有些冷，会对外出有一定影响，外出注意防风保暖。</item>
+    </array>
+
+    <array name="weather_info_fl">
+        <item></item>
+        <item>今天风有点大，外出的话，请做好防护措施。</item>
+        <item>微风</item>
+        <item>微风拂面，感觉不错，建议适当地去户外放松一下。</item>
+        <item>暂缺</item>
+        <item>现在暂时没有风力指数的详细信息，请稍后再查看。</item>
     </array>
 </resources>
