--- a/src/packages/apps/MiuiGallery/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values-zh-rTW/strings.xml
@@ -208,6 +208,7 @@
 
     <string name="click_to_enter_camera">觸控拍照</string>
     <string name="camera_view_none_message">手機拍攝的照片會出現在這裡</string>
+    <string name="none_picture">相簿中沒有照片</string>
 
     <!-- single image view -->
     <string name="open_single_image_failure">打開圖片失敗！</string>
