--- a/src/packages/apps/MiuiMusic/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiMusic/res/values-zh-rTW/strings.xml
@@ -103,7 +103,7 @@
     <string name="download_lyric_summary">不會再佔用太多流量，建議開啟</string>
     <string name="listen_to_music_online_settings">允許消耗流量聽在線音樂</string>
     <string name="listen_to_online_summary">可能產生高額流量費用，建議關閉</string>
-    <string name="correct_id3_settings">允許消耗流量校準歌曲信息</string>
+    <string name="correct_id3_settings">允許消耗流量校正歌曲資訊</string>
     <string name="correct_id3_summary">可能產生較高流量費用，建議關閉</string>
 
     <string name="player_display_settings">播放器顯示</string>
@@ -117,8 +117,8 @@
     <string name="lyric_and_album">詞圖相關</string>
     <string name="android_album_settings">使用內嵌專輯封面</string>
     <string name="android_album_summary">根據檔案名關聯，可能出現錯誤，建議關閉</string>
-    <string name="auto_correct_id3_settings">自動校準歌曲信息</string>
-    <string name="auto_correct_id3_summary">使用百度音頻指紋算法，播放歌曲時校準該歌曲ID3信息</string>
+    <string name="auto_correct_id3_settings">自動校正歌曲資訊</string>
+    <string name="auto_correct_id3_summary">使用百度聲紋演算，播放歌曲時校正該歌曲ID3資訊</string>
 
     <string name="music_filter">檔案過濾</string>
     <string name="filter_by_size">按大小過濾</string>
@@ -365,11 +365,11 @@
     <string name="detail_format">"格式："</string>
 
     <!-- AudioFP -->
-    <string name="correct_id3_by_internet">自動聯網校準歌曲信息(ID3)</string>
-    <string name="correct_id3_start">開始聯網校驗歌曲信息(ID3)。</string>
-    <string name="correct_id3_success">歌曲信息(ID3)已自動校準。</string>
-    <string name="correct_id3_failed">歌曲信息(ID3)校準失敗。</string>
-    <string name="correct_id3_open_other_connect">請打開運營商網絡校準歌曲信息(ID3)設置。</string>
-    <string name="correct_id3_not_support">不支持該文件類型的歌曲信息(ID3)修改。</string>
-     <string name="batch_correct_id3_completed">批量校準歌曲信息(ID3)完成。</string>
+    <string name="correct_id3_by_internet">自動連網校正歌曲資訊(ID3)</string>
+    <string name="correct_id3_start">開始連網校正歌曲資訊(ID3)。</string>
+    <string name="correct_id3_success">歌曲資訊(ID3)已自動校正。</string>
+    <string name="correct_id3_failed">歌曲資訊(ID3)校正失敗。</string>
+    <string name="correct_id3_open_other_connect">請打開電信商網路校正歌曲資訊(ID3)設定。</string>
+    <string name="correct_id3_not_support">不支援該檔案類型的歌曲資訊(ID3)修改。</string>
+    <string name="batch_correct_id3_completed">批次校正歌曲資訊(ID3)完成。</string>
 </resources>
