--- a/src/packages/apps/MiuiVideo/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiVideo/res/values-zh-rTW/strings.xml
@@ -42,9 +42,9 @@
     <string name="music">音樂</string>
     <string name="variety">綜藝</string>
     <string name="comment">評論</string>
-    <string name="comment_hint">請輸入您的評論</string>
+    <string name="comment_hint">請填寫您的評論，至少5個字</string>
     <string name="publish">發佈</string>
-    <string name="no_comment_tip">評論內容不能為空</string>
+    <string name="no_comment_tip">字數太少啦</string>
     <string name="comment_detailInfo">評論詳情</string>
     <string name="comment_submiting">提交評論</string>
     <string name="search">搜尋</string>
@@ -53,6 +53,7 @@
     <string name="di">第</string>
     <string name="ji">集</string>
     <string name="quan">全</string>
+    <string name="year">年</string>
     <string name="month">月</string>
     <string name="day">日</string>
     <string name="update">更新</string>
@@ -81,9 +82,15 @@
     <string name="searching"> <CDATA> 搜尋中... </CDATA> </string>
 
     <string name="recentplay">最近播放</string>
+    <string name="clearplayhistory">清除播放記錄</string>
+    <string name="no_playhistory">播放記錄為空</string>
 
     <string name="declaration">聲明</string>
     <string name="cancel">取消</string>
     <string name="ok">確定</string>
     <string name="declaration_content">您將使用的線上視訊來自搜狐視頻、奇藝等線上視訊服務。點擊“確定”表示您認可並願意使用，點擊“取消”退出。</string>
+
+    <string name="today">今天</string>
+    <string name="yestorday">昨天</string>
+    <string name="playvideo">播放視訊</string>
 </resources>
