--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
@@ -162,7 +162,7 @@
     <string name="balance">余额：<xliff:g id="value">%1$s</xliff:g>米币</string>
     <string name="mili_center">米币中心</string>
 
-    <string name="error_mili_title">米币不足！</string>
+    <string name="error_mili_title">米币不足，请先充值</string>
     <string name="error_mili_summary">米币不足，请先充值</string>
     <string name="error_password_title">密码错误！</string>
     <string name="error_password_summary">请检查密码是否正确</string>
