--- a/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
@@ -160,10 +160,10 @@
     <string name="button_pay">Confirm</string>
     <string name="button_recharge">Recharge</string>
     <string name="balance">Balance:<xliff:g id="value">%1$s</xliff:g>Mi dollars</string>
-    <string name="mili_center">Mi dollars center</string>
+    <string name="mili_center">Xiaomi dollars center</string>
 
-    <string name="error_mili_title">Insufficient Xiaomi dollars</string>
-    <string name="error_mili_summary">Insufficient Xiaomi dollars, please recharge</string>
+    <string name="error_mili_title">Insufficient Mi dollars, please recharge</string>
+    <string name="error_mili_summary">Insufficient Mi dollars, please recharge</string>
     <string name="error_password_title">Invalid password</string>
     <string name="error_password_summary">Please check if password has been input correctly</string>
     <string name="error_network_title">Network error</string>
