--- a/src/packages/apps/MiuiMusic/res/values/strings.xml
+++ b/src/packages/apps/MiuiMusic/res/values/strings.xml
@@ -444,11 +444,11 @@
     <string name="detail_format">"Format: "</string>
 
     <!-- AudioFP -->
-    <string name="correct_id3_by_internet">Auto correct ID3 by internet</string>
-    <string name="correct_id3_start">Correct ID3 by internet start.</string>
-    <string name="correct_id3_success">Correct ID3 succeed.</string>
-    <string name="correct_id3_failed">Correct ID3 failed.</string>
-    <string name="correct_id3_open_other_connect">Please turn on correct ID3 using mobile internet connection setting.</string>
+    <string name="correct_id3_by_internet">Auto connect to correct song tags(ID3)</string>
+    <string name="correct_id3_start">Correct song tags(ID3) by internet start.</string>
+    <string name="correct_id3_success">Correct song tags(ID3) succeed.</string>
+    <string name="correct_id3_failed">Correct song tags(ID3) failed.</string>
+    <string name="correct_id3_open_other_connect">Please enable carrier data network to correct song tags(ID3).</string>
     <string name="correct_id3_not_support">Do not suppoet to correct ID3 in this file type.</string>
      <string name="batch_correct_id3_completed">Correct a batch of ID3 completed.</string>
 </resources>
